unpackaged/main/default/objects/CMPL123__WF_Step__c/CMPL123__WF_Step__c.object-meta.xml
<CustomObject>
    <description>Workflow Steps</description>
    <label>Workflow Step</label>
    <nameField>
        <displayFormat>Step-{000000}</displayFormat>
        <label>Step Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>