unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__Action__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Action__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Action</description>
        <inlineHelpText>Specify Action</inlineHelpText>
        <label>Action</label>
        <referenceTo>CMPL123__WF_Action__c</referenceTo>
        <relationshipLabel>Workflow Actions</relationshipLabel>
        <relationshipName>WF_Actions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>