unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__End_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__End_Status__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>End Status</description>
        <inlineHelpText>Select End Staus</inlineHelpText>
        <label>End Status</label>
        <referenceTo>CMPL123__WF_Status__c</referenceTo>
        <relationshipLabel>Workflow End Steps</relationshipLabel>
        <relationshipName>WF_End_Steps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>