unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__Is_Record_Lock_Required__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_Record_Lock_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Record Lock Required</description>
        <inlineHelpText>Check if you want to lock (no edit/delete) the record</inlineHelpText>
        <label>Lock Record?</label>
        <type>Checkbox</type>
    </CustomField>