unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__Is_Start_Step__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Is_Start_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Start Step?</description>
        <inlineHelpText>Check, if it is the first step</inlineHelpText>
        <label>Is Start Step?</label>
        <type>Checkbox</type>
    </CustomField>