unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__Mandate_Fields__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Mandate_Fields__c</fullName>
        <label>Mandate Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>