unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__Order__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Order__c</fullName>
        <description>Step Order</description>
        <inlineHelpText>Specify Step Order</inlineHelpText>
        <label>Order</label>
        <precision>17</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </CustomField>