unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__Parent_Step__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Parent_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Step Id</description>
        <inlineHelpText>Select Parent Step (if applicable)</inlineHelpText>
        <label>Parent Step</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CMPL123__WF_Step__c.CMPL123__WF_Rule__c</field>
                <operation>equals</operation>
                <valueField>$Source.CMPL123__WF_Rule__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123__WF_Step__c</referenceTo>
        <relationshipLabel>Workflow Steps</relationshipLabel>
        <relationshipName>Workflow_Steps</relationshipName>
        <type>Lookup</type>
    </CustomField>