unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__Permission_Group__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Permission_Group__c</fullName>
        <description>Specify Permission group</description>
        <inlineHelpText>Specify Permission group</inlineHelpText>
        <label>Permission Group/User</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>