unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__Start_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Start_Status__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Start Status</description>
        <inlineHelpText>Select Start Status</inlineHelpText>
        <label>Start Status</label>
        <referenceTo>CMPL123__WF_Status__c</referenceTo>
        <relationshipLabel>Workflow Start Steps</relationshipLabel>
        <relationshipName>WF_Start_Steps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>