unpackaged/main/default/objects/CMPL123__WF_Step__c/fields/CMPL123__WF_Rule__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__WF_Rule__c</fullName>
        <description>Workflow Rule</description>
        <inlineHelpText>Specify Parent Workflow Rule</inlineHelpText>
        <label>Workflow Rule</label>
        <referenceTo>CMPL123__WF_Rule__c</referenceTo>
        <relationshipLabel>Workflow Steps</relationshipLabel>
        <relationshipName>WF_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </CustomField>